Product Details implementation

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,5 +1,5 @@
-<router-outlet>
-  
-<app-header></app-header>
+<app-header class="z-10"></app-header>
 
-</router-outlet>
+<div class="h-[calc(100%-64px)] overflow-auto">
+  <router-outlet></router-outlet>
+</div>
