--- a/src/app/pages/products-grid/products-grid.html
+++ b/src/app/pages/products-grid/products-grid.html
@@ -1,1 +1,40 @@
-<p>products-grid works!</p>
+
+
+<mat-sidenav-container>
+        <mat-sidenav mode="side"opened="true">
+        
+            <div class="p6">
+               <h2 class="text-lg text-grey-900">Categories</h2> 
+
+               <mat-nav-list>
+                @for (cat of categories(); track cat) {
+                    <mat-list-item [activated]="cat === category()" class="my-2" [routerLink]="['/products',cat]">
+                        <span matListItemTitle class="font-medium" [class]="cat === category() ? '!text-white': null">
+                            {{cat | titlecase}}
+                        </span>
+                    </mat-list-item>
+                }
+               </mat-nav-list>
+            </div>
+
+        </mat-sidenav>
+
+    <mat-sidenav-content class="bg-gray-100 p-6 h-full">
+            <h1 class="text-2xl font-bold text-gray-900">{{category() | titlecase}} </h1>
+            <p class="text-base text-gray-600 mb-6">
+                {{filteredProducts().length}} Products Found
+            </p>
+    <div class="responsive-grid">
+    @for (product of filteredProducts(); track product.id){
+        <app-product-cart [product]="product"/>
+
+}
+</div>
+    </mat-sidenav-content>
+</mat-sidenav-container>
+
+<div class="bg-gray-100 p-6" >
+
+
+</div>
+
