--- a/src/app/pages/products-grid/products-grid.html
+++ b/src/app/pages/products-grid/products-grid.html
@@ -22,10 +22,10 @@
     <mat-sidenav-content class="bg-gray-100 p-6 h-full">
             <h1 class="text-2xl font-bold text-gray-900">{{category() | titlecase}} </h1>
             <p class="text-base text-gray-600 mb-6">
-                {{filteredProducts().length}} Products Found
+                {{store.filteredProducts().length}} Products Found
             </p>
     <div class="responsive-grid">
-    @for (product of filteredProducts(); track product.id){
+    @for (product of store.filteredProducts(); track product.id){
         <app-product-cart [product]="product"/>
 
 }
