--- a/src/app/pages/my-wishlist/my-wishlist.html
+++ b/src/app/pages/my-wishlist/my-wishlist.html
@@ -1,1 +1,35 @@
-<p>my-wishlist works!</p>
+<div class="mx-auto max-w-[1200px] py-6 px-4">
+
+    <app-back-button navigateTo="/products/all" class="mb-6">Continue Shopping</app-back-button>
+
+    @if(store.wishlistItems().length > 0){
+        <div class="flex justify-between items-center mb-6">
+            <h1 class="text-2xl font-bold">My Wishlist</h1>
+            <span class="text-gray-500 text-xl">{{store.wishlistItems().length}} items</span>
+        </div>
+        <div class="responsive-grid">
+            @for(product of store.wishlistItems(); track product.id){
+                <app-product-cart [product]="product">
+                <button class="!absolute top-3 right-3 z-10 w-10 h-10 rounded-full !bg-white border-0 shadow-md flex items-center justify-center cursor-pointer transition-all duration-200 hover:scale-110 hover:shadow-lg" matIconButton
+        (click)="store.removeFromWishlist(product)">
+                <mat-icon>
+                    delete
+                </mat-icon>
+        </button>
+                </app-product-cart>
+            }
+        </div>
+
+        <div class="mt-8 flex justify-center">
+            <button matButton="outlined" class="danger" (click)="store.clearWishlist()">
+                Clear Wishlist
+            </button>
+        </div>
+
+    }@else{
+
+        <app-empty-wishlist></app-empty-wishlist>
+
+    }
+
+</div>
