--- a/src/app/pages/products-grid/products-grid.html
+++ b/src/app/pages/products-grid/products-grid.html
@@ -26,7 +26,9 @@
             </p>
     <div class="responsive-grid">
     @for (product of store.filteredProducts(); track product.id){
-        <app-product-cart [product]="product"/>
+        <app-product-cart [product]="product">
+        <app-toggle-wishlist-button [product]="product" class="!absolute z-10 top-3 right-3"></app-toggle-wishlist-button>
+        </app-product-cart>
 
 }
 </div>
