--- a/src/app/components/product-cart/product-cart.html
+++ b/src/app/components/product-cart/product-cart.html
@@ -3,7 +3,7 @@
         <img [src]="product().imageUrl" class="w-full h-[300px] object-cover rounded-t-xl" />
 
         <ng-content/>
-        
+
         <div class="p-5 flex flex-col flex-1">
             <h3 class="text-lg font-semibold text-gray-900 mb-2 leading-tight">
                 {{product().name}}
@@ -22,7 +22,7 @@
                 <span class="text-2xl font-bold text-grey-900">
                     ₹ {{product().price}}
                 </span>
-                <button matButton="filled" class="flex items-center gap-2" (click)="addToCartClicked.emit(product())">
+                <button matButton="filled" class="flex items-center gap-2" (click)="store.addToCart(product())">
                     <mat-icon>shopping_cart</mat-icon>
                     Add to Cart
                 </button>
