--- a/src/app/layout/header-actions/header-actions.html
+++ b/src/app/layout/header-actions/header-actions.html
@@ -2,7 +2,7 @@
     <button matIconButton routerLink="/wishlist" [matBadge]="store.wishlistItems().length" [matBadgeHidden]="store.wishlistItems().length === 0">
         <mat-icon>favorite</mat-icon>
     </button>
-    <button matIconButton>
+    <button matIconButton [matBadge]="store.cartCount()" [matBadgeHidden]="store.cartCount() === 0" routerLink="/cart" >
         <mat-icon>shopping_cart</mat-icon>
     </button>
     <button matButton>
