--- a/src/app/pages/view-cart/tease-wishlist/tease-wishlist.html
+++ b/src/app/pages/view-cart/tease-wishlist/tease-wishlist.html
@@ -1,3 +1,18 @@
 <div appViewPanel class="flex item-center justify-between">
-
+<div class="flex items-center gap-3">
+ <mat-icon class="!text-red-500">favorite_border</mat-icon>
+<div>
+    <h2 class="text-xl font-bold">Wishlist ({{store.wishlistCount()}})</h2>
+    <p class="text-gray-500">You have {{store.wishlistCount()}} items saved for later</p>
 </div>
+</div>
+<div class="flex items-center gap-3">
+    <button matButton routerLink="/wishlist" >View All</button>
+    <button matButton="filled" class="flex item-center gap-2" (click)="store.addAllWishlistToCart()">
+        <mat-icon>shopping_cart</mat-icon>
+        Add all to cart
+    </button>
+</div>
+</div>
+
+   
