order-success page implementation

--- a/src/app/components/summarize-order/summarize-order.html
+++ b/src/app/components/summarize-order/summarize-order.html
@@ -1,6 +1,11 @@
 <div appViewPanel>
 
     <h2 class="text-2xl font-bold mb-4">Order Summary</h2>
+    
+    <div class="space-y-2 pb-4">
+        <ng-content select="[checkoutItems]"/>
+    </div>
+    
     <div class="space-y-3 text-lg pt-4 border-t">
         <div class="flex justify-between">
             <span>Subtotal</span>
@@ -15,4 +20,6 @@
             <span> ₹ {{total()}}</span>
         </div>
     </div>
+
+    <ng-content select="[actionButtons]"/>
 </div>
