--- a/src/app/layout/header-actions/header-actions.html
+++ b/src/app/layout/header-actions/header-actions.html
@@ -1,14 +1,41 @@
 <div class="flex itmes-center gap-2">
-    <button matIconButton routerLink="/wishlist" [matBadge]="store.wishlistItems().length" [matBadgeHidden]="store.wishlistItems().length === 0">
-        <mat-icon>favorite</mat-icon>
+  <button
+    matIconButton
+    routerLink="/wishlist"
+    [matBadge]="store.wishlistItems().length"
+    [matBadgeHidden]="store.wishlistItems().length === 0"
+  >
+    <mat-icon>favorite</mat-icon>
+  </button>
+  <button
+    matIconButton
+    [matBadge]="store.cartCount()"
+    [matBadgeHidden]="store.cartCount() === 0"
+    routerLink="/cart"
+  >
+    <mat-icon>shopping_cart</mat-icon>
+  </button>
+  @if(store.user(); as user){
+  <button matIconButton [matMenuTriggerFor]="userMenu">
+    <img [src]="user.imageUrl" [alt]="user.name" class="w-8 h-8 rounded-full" />
+  </button>
+
+  <mat-menu #userMenu="matMenu" xPosition="before">
+    <div class="flex flex-col px-3 min-w-[200px]">
+      <span class="text-sm font-medium">{{ user.name }}</span>
+      <span class="text-xs text-gray-500">{{ user.email }}</span>
+    </div>
+
+    <mat-divider></mat-divider>
+
+    <button class="!min-h-[32px]" mat-menu-item (click)="store.signOut()">
+      <mat-icon>logout</mat-icon>
+      Sign Out
     </button>
-    <button matIconButton [matBadge]="store.cartCount()" [matBadgeHidden]="store.cartCount() === 0" routerLink="/cart" >
-        <mat-icon>shopping_cart</mat-icon>
-    </button>
-    <button matButton>
-        Sign In
-    </button>
-    <button matButton="filled">
-        Sign Up
-    </button>
+  </mat-menu>
+
+  }@else {
+  <button matButton (click)="openSignInDialog()">Sign In</button>
+  <button matButton="filled" (click)="openSignUpDialog()">Sign Up</button>
+  }
 </div>
