--- a/src/app/components/product-cart/product-cart.html
+++ b/src/app/components/product-cart/product-cart.html
@@ -1,10 +1,13 @@
- <div class="relative bg-white cursor-pointer rounded-xl shadow-lg overflow-hidden flex flex-col h-full">
+ <div class="relative bg-white cursor-pointer rounded-xl shadow-lg overflow-hidden flex flex-col h-full transition-all duration-200 ease-out hover:-translate-y-1 hover:shadow-xl">
 
-        <img [src]="product().imageUrl" class="w-full h-[300px] object-cover rounded-t-xl" />
+        <img [src]="product().imageUrl" 
+        class="w-full h-[300px] object-cover rounded-t-xl" 
+        [routerLink]="['/product', product().id]"
+        [style.view-transition-name]="'product-image'+product().id">
 
         <ng-content/>
 
-        <div class="p-5 flex flex-col flex-1">
+        <div class="p-5 flex flex-col flex-1" [routerLink]="['/product', product().id]">
             <h3 class="text-lg font-semibold text-gray-900 mb-2 leading-tight">
                 {{product().name}}
             </h3>
