--- a/src/app/pages/products-grid/products-grid.html
+++ b/src/app/pages/products-grid/products-grid.html
@@ -27,7 +27,8 @@
     <div class="responsive-grid">
     @for (product of store.filteredProducts(); track product.id){
         <app-product-cart [product]="product">
-        <app-toggle-wishlist-button [product]="product" class="!absolute z-10 top-3 right-3"></app-toggle-wishlist-button>
+        <app-toggle-wishlist-button [product]="product" class="!absolute z-10 top-3 right-3 !bg-white shadow-md rounded-md transition-all" [style.view-transition-name]="'wishlist-button'+product.id">
+></app-toggle-wishlist-button>
         </app-product-cart>
 
 }
