--- a/src/app/pages/view-product-detail/view-product-detail.html
+++ b/src/app/pages/view-product-detail/view-product-detail.html
@@ -7,10 +7,11 @@
         <div class="flex gap-8 mb-8">
             <img [src]="product.imageUrl" class="w-[500px] h-[550px] object-cover rounded-lg"
             [style.view-transition-name]="'product-image'+product.id">
-/>
             <div class="flex-1">
              <app-product-info [product]="product"></app-product-info>   
             </div>
         </div>
+    <app-view-reviews [product]="product"></app-view-reviews>
+
     }
 </div>
